--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "lint:fix": "./node_modules/.bin/eslint ./src --ext .js --fix"
   },
   "dependencies": {
-    "apify": "^0.20.3",
+    "apify": "^2.2.1",
     "extract-domain": "^2.0.6",
     "getdomain": "^1.3.1",
+    "puppeteer": "^10.4.0",
     "request-promise": "^4.2.2",
     "underscore": "^1.9.1"
   },
