--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "./node_modules/.bin/eslint ./src --ext .js --fix"
   },
   "dependencies": {
-    "apify": "^2.2.1",
+    "apify": "^2.3.0",
     "extract-domain": "^2.0.6",
     "getdomain": "^1.3.1",
     "puppeteer": "^10.4.0",
@@ -22,8 +22,7 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.18.0"
+    "@apify/eslint-config": "^0.3.1",
+    "eslint": "^8.12.0"
   }
 }
